[gd_scene load_steps=15 format=3 uid="uid://hwvpsllrlqk6"]

[ext_resource type="Script" path="res://ui/tabs/tab_properties/field/number_edit/number_edit.gd" id="1_gghfl"]
[ext_resource type="Texture2D" uid="uid://ddqqp0ni1aegm" path="res://resources/icons/grabber.png" id="2_cu3px"]
[ext_resource type="Texture2D" uid="uid://cl44madgoje3e" path="res://resources/icons/grabber_highlight.png" id="3_cedsl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sh42q"]
content_margin_top = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.105882, 0.113725, 0.121569, 1)
border_width_top = 8
border_width_bottom = 8
border_color = Color(0.143122, 0.152725, 0.162329, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_to273"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.369293, 0.351825, 0.340185, 1)
border_width_top = 8
border_width_bottom = 3
border_color = Color(0.470959, 0.450622, 0.435383, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3rbcp"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.369293, 0.351825, 0.340185, 1)
border_width_top = 8
border_width_bottom = 8
border_color = Color(0.470959, 0.450622, 0.435383, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_affon"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0.215686, 0.203922, 0.196078, 1)
border_width_top = 8
border_width_bottom = 3
border_color = Color(0.313726, 0.298039, 0.286275, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_as8my"]
bg_color = Color(0.369293, 0.351825, 0.340185, 1)
border_width_top = 3
border_width_bottom = 8
border_color = Color(0.470959, 0.450622, 0.435383, 1)
border_blend = true
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yu6b4"]
bg_color = Color(0.369293, 0.351825, 0.340185, 1)
border_width_top = 3
border_width_bottom = 8
border_color = Color(0.470959, 0.450622, 0.435383, 1)
border_blend = true
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xgl75"]
bg_color = Color(0.215686, 0.203922, 0.196078, 1)
border_width_top = 3
border_width_bottom = 8
border_color = Color(0.313726, 0.298039, 0.286275, 1)
border_blend = true
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4cbtk"]
content_margin_left = 8.0
content_margin_top = 0.0
content_margin_right = 8.0
content_margin_bottom = 0.0
bg_color = Color(0.105882, 0.113725, 0.121569, 1)
border_width_top = 8
border_width_bottom = 8
border_color = Color(0.0791198, 0.0856792, 0.0922385, 1)
border_blend = true
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 1

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s5tph"]
content_margin_left = 0.0
content_margin_top = 3.0
content_margin_right = 0.0
content_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jogsd"]
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8v524"]
bg_color = Color(0.707967, 0.707967, 0.707966, 1)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
corner_detail = 1

[node name="NumberEdit" type="PanelContainer"]
custom_minimum_size = Vector2(60, 0)
offset_right = 128.0
offset_bottom = 37.0
theme_override_styles/panel = SubResource("StyleBoxFlat_sh42q")
script = ExtResource("1_gghfl")
has_slider = true
has_arrows = true

[node name="V" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="H" type="HBoxContainer" parent="V"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="V" type="VBoxContainer" parent="V/H"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="RightButton" type="Button" parent="V/H/V"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_to273")
theme_override_styles/hover = SubResource("StyleBoxFlat_3rbcp")
theme_override_styles/pressed = SubResource("StyleBoxFlat_affon")
icon_alignment = 1
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="V/H/V/RightButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "+"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LeftButton" type="Button" parent="V/H/V"]
unique_name_in_owner = true
custom_minimum_size = Vector2(26, 0)
layout_mode = 2
size_flags_vertical = 3
focus_mode = 0
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_as8my")
theme_override_styles/hover = SubResource("StyleBoxFlat_yu6b4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_xgl75")
icon_alignment = 1
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="V/H/V/LeftButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "-"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PrefixContainer" type="MarginContainer" parent="V/H"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 4

[node name="PrefixLabel" type="Label" parent="V/H/PrefixContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="V/H"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_4cbtk")
alignment = 2
max_length = 9
expand_to_text_length = true
virtual_keyboard_type = 3
caret_blink = true

[node name="SuffixContainer" type="MarginContainer" parent="V/H"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_right = 8

[node name="SuffixLabel" type="Label" parent="V/H/SuffixContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
horizontal_alignment = 1
vertical_alignment = 1

[node name="SliderContainer" type="MarginContainer" parent="V"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = -2
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = -2

[node name="Slider" type="HSlider" parent="V/SliderContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
mouse_filter = 1
mouse_force_pass_scroll_events = false
theme_override_constants/center_grabber = 1
theme_override_icons/grabber = ExtResource("2_cu3px")
theme_override_icons/grabber_highlight = ExtResource("3_cedsl")
theme_override_styles/slider = SubResource("StyleBoxEmpty_s5tph")
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_jogsd")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxFlat_8v524")
value = 34.0
scrollable = false

[node name="ArrowsContainer" type="HBoxContainer" parent="V"]
unique_name_in_owner = true
visible = false
layout_mode = 2
